# bevy_northstar

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  configuration.html  debugging.html  getting_started.html  grid_settings.html  grid_updates.html  index.html  introduction.html  nav_data.html  navigation_masks.html  pathfinding.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml
assets/world/: demo_010.tmx  world.world
assets/world2/: demo_004.tmx  demo_008.tmx  demo_011.tmx  demo_016.tmx  demo_024.tmx  demo_025.tmx  demo_029.tmx  demo_033.tmx  demo_038.tmx  demo_045.tmx  demo_047.tmx  demo_050.tmx  demo_052.tmx  demo_054.tmx  demo_059.tmx  demo_064.tmx  world.world
benches/: benches.rs
book/src/: SUMMARY.md  debugging.md  getting_started.md  grid_updates.md  nav_data.md  navigation_masks.md
book/src/migrations/: 001_v0.3.0.md  002_v0.4.0.md
book/src/neighborhood/: 01_neighborhoods.md
book/src/pathfinding/: 01_plugin.md  02_modes.md  03_path.md  04_manual_pathfinding.md
examples/: 3d_voxel_world.rs  basic.rs  collision_testing.rs  demo.rs  freeform_movement.rs  isometric.rs  nav_mask.rs  reroute.rs  stress_demo.rs
examples/shared/: mod.rs
migrations/: 001_v0.3.0.html  002_v0.4.0.html
neighborhood/: 01_neighborhoods.html  02_filters.html
pathfinding/: 01_plugin.html  02_modes.html  02_path.html  03_manual_pathfinding.html  03_path.html  04_manual_pathfinding.html
src/: astar.rs  chunk.rs  components.rs  debug.rs  dijkstra.rs  graph.rs  grid.rs  hpa.rs  lib.rs  nav.rs  nav_mask.rs  neighbor.rs  path.rs  pathfind.rs  plugin.rs  raycast.rs  thetastar.rs
tests/: reroute.rs
