[package]
name = "bevy_northstar"
version = "0.3.2"
edition = "2021"

authors = ["John Mullins"]
description = "A Bevy plugin for Hierarchical Pathfinding"
homepage = "https://github.com/jtothethree/bevy_northstar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jtothethree/bevy_northstar"

categories = ["game-development"]
keywords = ["bevy", "pathfinding", "astar", "hpa", "game"]
exclude = ["assets/*", "res/*"]

[features]
default = ["parallel"]
stats = []
parallel = ["rayon", "ndarray/rayon"]
voxel_world = ["bevy_voxel_world"]
panorbit_cam = ["bevy_panorbit_camera"]

[dependencies]
thiserror = "2.0.12"
indexmap = "2.10.0"
ndarray = { version = "0.16.1" }
rayon = { version = "1.10.0", optional = true }
rustc-hash = "2.1.1"
strum = "0.27.1"
slab = "0.4.10"
smallvec = "1.15.1"
bevy_voxel_world = { version = "0.12.0", optional = true }
bevy_panorbit_camera = { version = "0.28.0", optional = true }

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = ["bevy_render", "bevy_gizmos", "bevy_log"]

[dev-dependencies]
bevy = { version = "0.16.1", features = ["bevy_dev_tools"] }
bevy_ecs_tilemap = { version = "0.16" }
bevy_ecs_tiled = { version = "0.7.3", features = ["user_properties"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
pprof = { version = "0.15.0", features = ["flamegraph"] }

rand = "0.9.1"

[target.'cfg(not(target_os = "windows"))']
[[bench]]
name = "benches"
harness = false

[[example]]
name = "demo"
required-features = ["stats"]

[[example]]
name = "isometric"

[[example]]
name = "collision_testing"
required-features = ["stats"]

[[example]]
name = "basic"

[[example]]
name = "nav_mask"

[[example]]
name = "freeform_movement"

[[example]]
name = "3d_voxel_world"
required-features = ["voxel_world", "panorbit_cam"]
