[package]
name = "bevy_northstar"
version = "0.6.0"
edition = "2021"
authors = ["John Mullins"]
description = "A Bevy plugin for Hierarchical Pathfinding"
homepage = "https://github.com/jtothethree/bevy_northstar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jtothethree/bevy_northstar"
categories = ["game-development"]
keywords = ["astar", "bevy", "game", "hpa", "pathfinding"]
exclude = ["assets/*", "res/*"]

[[example]]
name = "demo"
required-features = ["stats"]

[[example]]
name = "isometric"

[[example]]
name = "collision_testing"
required-features = ["stats"]

[[example]]
name = "basic"

[[example]]
name = "nav_mask"

[[example]]
name = "freeform_movement"

[[example]]
name = "3d_voxel_world"
# required-features = ["bevy_voxel_world", "bevy_panorbit_camera", "ndshape"]

[[bench]]
harness = false
name = "benches"

[dependencies]
indexmap = "2.12.1"
ndarray = { version = "0.17.1" }
rayon = { version = "1.11.0", optional = true }
rustc-hash = "2.1.1"
slab = "0.4.10"
smallvec = "1.15.1"

[dependencies.bevy]
version = "0.18"
default-features = false
features = ["bevy_gizmos", "bevy_log", "bevy_render"]

[dev-dependencies]
bevy = { version = "0.18", features = ["bevy_dev_tools"] }
bevy_ecs_tiled = { version = "0.11.2", features = ["user_properties"] }
bevy_panorbit_camera = { version = "0.34.0" }
bevy_voxel_world = { git = "https://github.com/AndreRoelofs/bevy_voxel_world.git", branch = "bevy_18" }
ndshape = { version = "0.3.0" }
# bevy_ecs_tilemap = { version = "0.16" }
# bevy_ecs_tiled = { git = "https://github.com/adrien-bon/bevy_ecs_tiled", branch="feat/bevy-0.17", features = ["user_properties"] }

[target.'cfg(not(target_os = "windows"))']
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
criterion = { version = "0.5.0" }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
rand = "0.9.2"
tiled = { version = "0.15.0" }

[features]
default = ["parallel"]
parallel = ["ndarray/rayon", "rayon"]
stats = []
